meta tags updated

--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Farhad Nowzari</title>
+    <meta name="description" content="An enthusiastic Software Developer called Farhad who is never tired of learning new topics" />
+    <meta name="keywords" content="Farhad Nowzari, Farhad, Nowzari, Software Developer, Web Developer, Frontend Developer, Backend Developer, Fullstack Developer, React Developer, Node Developer, JavaScript Developer, TypeScript Developer, HTML Developer, CSS Developer, SASS Developer, SCSS Developer, Webpack Developer, Vite Developer, Gatsby Developer, Next Developer, Express Developer, MongoDB Developer, MySQL Developer, PostgreSQL Developer, SQLite Developer, Firebase Developer, AWS Developer, Azure Developer, Netlify Developer, Vercel Developer, Heroku Developer, GitHub Developer, GitLab Developer, Bitbucket Developer, Docker Developer, Kubernetes Developer, Jenkins Developer, Travis Developer, CircleCI Developer, Git Developer, NPM Developer, Yarn Developer, REST Developer, GraphQL Developer, WebSockets Developer, WebRTC Developer, PWA Developer, SPA Developer, SSR Developer, SSG Developer, MERN Developer, MEAN Developer, MEVN Developer, JAMstack Developer, Serverless Developer, Microservices Developer, Monolithic Developer, CI/CD Developer, TDD Developer, BDD Developer, DDD Developer, OOP"/>
+    <meta name="author" content="Farhad Nowzari" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Portfolio | Farhad Nowzari" />
+    <meta property="og:description" content="An enthusiastic Software Developer called Farhad who is never tired of learning new topics" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://farhadnowzari.github.io" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portfolio | Farhad Nowzari" />
+    <meta name="twitter:description" content="An enthusiastic Software Developer called Farhad who is never tired of learning new topics" />
+    <meta name="twitter:url" content="https://farhadnowzari.github.io" />
+    <meta name="twitter:creator" content="@farhad_nowzari" />
+    <meta name="twitter:site" content="@farhad_nowzari" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Language" content="en" />
   </head>
-  <body>
+  <body lang="en">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
